# ssokdak

./: .gitignore  README.md  retrospect.md
cloud-service/: pyproject.toml  use_vertex_ai.py
finetuning/: change_to_onnx.ipynb  checking_model.ipynb  final_check_quantized_model.ipynb  finetuning_xtts.ipynb  quantization_model.ipynb
ssokdak-STT/stt-whisper-tiny/: check_data.ipynb  finetuning_model.ipynb  infer_to_whisper_model.ipynb  mictest_with_faster_whisper.py  mictest_with_whisper.py  requirements.txt  using_faster-whisper.ipynb  visualize_with_graph.py
ssokdak-TTS/: README.md
ssokdak-TTS/finetuning/: check_quantization_model.ipynb  checking_model.ipynb  quantization_model.ipynb
ssokdak-TTS/make-dataset/: Split Audio Files and Convert LJSpeech Format.ipynb  make_dataset.ipynb
ssokdak-TTS/tts-higgs/: make_quantization_model.ipynb  test_audio.ipynb
ssokdak-TTS/voicecloning-supertone/: voice_cloning.py
stt-whisper-tiny/: mic_test.ipynb  mictest_with_faster_whisper.py  pyproject.toml  realtime_mictest.py  save_audio.py
tts-coqui/: finetuning_with_dataset.ipynb  test_coqui.ipynb  use_coqui.ipynb
tts-higgs/: test_audio.ipynb
wakeword/: LSTM.md  requirements.txt  wakeword.ipynb
