[project]
name = "stt-whisper-tiny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper==1.0.2",
    "noisereduce==3.0.2",
    "openai-whisper>=20250625",
    "pyaudio==0.2.14",
    "speechrecognition==3.10.4",
    "webrtcvad-wheels>=2.0.14",
]
